- new: option enable database keys for faster lightning search/drawing
    --> uses some disk space
    --> disabled by default
	--> you should enable if you have archived lightning-data and enough disk space
- new: residual time graphs (by andreas)
- new: xy-graphs for signals (by andreas)
- new: added a clean config.php.example
- new: possibility to view signals of other station to a strike
- improved: partial file download for raw data, default interval is 10 minutes now
- improved: (a bit) behaviour with lightning search
- fix: cleaned and fixed install
- fix: update longtime-statistics only when station is active
- fix: user cookie behaviour, session time display
- dev: added folder for classes
- dev: added Database, Timestamp and SignalGraph classes
- dev: added channels/ntime column to database-table "raw"


Version 0.7.4a (2012-02-10)
---------------------------
- new: italian translation (thx to Stefano Cirilli - www.meteo.units.it)
- new: copyright for translators
- fix: station statistics
- fix: changed signal import folder name to "raw_data"

Version 0.7.4 (2012-02-04)
--------------------------
- IMPORTANT: changes for accessing new Blitzortung.org raw data (for signals) 
   --> there may be some more changes in the next days/weeks (no more archiv.cgi needed)
   --> older versions of MyBlitzortung won't get any raw data!
- new: option to resize maps
- new: more descriptions
- new: header-text for maps
- new: update-button above map
- new: much faster calculation of strike densities! 
       NOTE: * not compatible with old datasets! 
             * old entries will be re-created if strike data is available
- new: new colors and functions for densities
- new: better navigation in archives (maps & animation)
- new: time-ranges in network statistics (has to be enabled)
- new: creation of longtime-statistics for all stations (causes high DB-load)
- new: region select in statistics -> strikes -> year/month