@@ -473,8 +473,12 @@
 @define('BO_MAP_MYBO_ICON', 'http://labs.google.com/ridefinder/images/mm_20_blue.png');
 
 //Version of Google Maps API
-@define('BO_GMAP_API_VERSION', 'v=3.6');
+@define('BO_GMAP_API_VERSION', '3.7');
 
+//Google Maps additional parameters
+// - API Key: &key={key}
+// - Sensor: &sensor={false|true}  <-- must be included!
+@define('BO_GMAP_PARAM', 'sensor=false');
 
 /*******************************************************************/
 /*** Calculate tracks                                            ***/
